# SDL3_Game

./: .gitignore  CMakeLists.txt  README.md
shaders/: fragment.glsl  fragment.spv  vertex.glsl  vertex.spv
src/: Scene.cpp  System.h  app.cpp  app.h  components.h  label.cpp  label.h  main.cpp  my_scene.cpp  my_scene.h  render_system.cpp  render_system.h  renderer_2_d.cpp  renderer_2_d.h  scene.h
src/c/: label.c  label.h  main.c  main.cpp  renderer_2_d.cpp  renderer_2_d.h
src/components/: components.h
src/cpp/: renderer_2_d.cpp  renderer_2_d.h
src/main/: app.cpp  app.h  main.cpp
src/scenes/: Scene.cpp  Scene.h  my_scene.cpp  my_scene.h
src/systems/: System.h  render_system.cpp  render_system.h
src/utils/: asset_manager.cpp  asset_manager.h  vector_2.h
tools/: CMakeLists.txt
tools/src/: texture_packer.cpp
